--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 			<main class="page">
 				<footer class="footer">
-	<div class="footer__video"><video autoplay loop muted playsinline src="videos/2_5300869772257282850.MP4"></video></div>
+	<div class="footer__video"><img  src="img/2_5300869772257282850.png"></div>
 	<div class="footer__container _container">
 		<div class="home__title _scr-item">CAPONE</div>
 
@@ -111,5 +111,4 @@
 <script src="js/app.min.js"></script>
 	</body>
 
-<!-- Mirrored from bugcat.online/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 11 May 2024 06:57:35 GMT -->
 </html>
