--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		<div class="wrapper">
 			<header class="header">
 	<div class="header__container">
-		<a href="https://twitter.com/BUGCAT_SOLANA" target="_blank"><img src="img/x.png" alt></a>
-		<a href="https://t.me/BUGCAT_TP" target="_blank"><img src="img/tg.png" alt></a>
+		<a href="https://twitter.com/caponecat_TRX" target="_blank"><img src="img/x.png" alt></a>
+		<a href="https://t.me/CaponeTheCat" target="_blank"><img src="img/tg.png" alt></a>
 	</div>
 </header>
 
@@ -71,9 +71,9 @@
 					<div class="home">
 
 						<div class="footer__btns">
-							<a href="https://twitter.com/BUGCAT_SOLANA" target="_blank"><img src="img/x.png" alt></a>
-							<a href="https://www.dextools.io/app/en/solana/pair-explorer/8K75cwroQfnqXk6QHdbG2pv1JdZicLfzKxKTPPDuT5jy?t=1714646013916" target="_blank" class="_join">JOIN</a>
-							<a href="https://t.me/BUGCAT_TP" target="_blank"><img src="img/tg.png" alt></a>
+							<a href="https://twitter.com/caponecat_TRX" target="_blank"><img src="img/x.png" alt></a>
+							<a href="#" target="_blank" class="_join">JOIN</a>
+							<a href="https://t.me/CaponeTheCat" target="_blank"><img src="img/tg.png" alt></a>
 						</div>
 					</div>
 
